# src/main/resources/static/api-docs.yaml
@@ -17,13 +17,8 @@ components:
         name:
           type: string
           description: Nome do autor
-        birthDate:
-          type: string
-          format: date
-          description: Data de nascimento do autor
       required:
         - name
-        - birthDate
 
     AuthorResponse:
       type: object
@@ -34,10 +29,6 @@ components:
         name:
           type: string
           description: Nome do autor
-        birthDate:
-          type: string
-          format: date
-          description: Data de nascimento do autor
 
     BookResponse:
       type: object
@@ -128,6 +119,65 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AuthorResponse'
+        '400':
+          description: ID inválido enviado
+        '401':
+          description: Token JWT ausente ou inválido
+        '404':
+          description: Autor não encontrado
+        '500':
+          description: Erro interno no servidor
+
+    put:
+      tags:
+        - Autores
+      summary: Atualiza os dados de um autor pelo ID
+      description: Permite atualizar todos os dados de um autor existente
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID do autor a ser atualizado
+          schema:
+            type: integer
+      requestBody:
+        description: Dados do autor a ser atualizado
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AuthorRequest'
+      responses:
+        '204':
+          description: Autor atualizado com sucesso
+        '400':
+          description: Dados inválidos enviados
+        '401':
+          description: Token JWT ausente ou inválido
+        '404':
+          description: Autor não encontrado
+        '500':
+          description: Erro interno no servidor
+
+    delete:
+      tags:
+        - Autores
+      summary: Remove um autor pelo ID
+      description: Permite deletar um autor pelo ID no banco de dados
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID do autor a ser deletado
+          schema:
+            type: integer
+      responses:
+        '204':
+          description: Autor removido com sucesso
         '400':
           description: ID inválido enviado
         '401':
